refactor android login/logout tests for new app